--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#61DAFB" />
+    <meta name="theme-color" content="#0d90e5" />
     <meta
       name="description"
       content="MyRoutine - Track your daily tasks and routines"
